--- a/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
@@ -42,3 +42,17 @@
         }
     }
 }
+
+.productButton{
+    background: transparent;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 12px;
+    width: 162px;
+    & img{
+        width: 40px;
+    }
+    & span{
+        margin-right: 10px;
+    }
+
+}
