--- a/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
@@ -11,9 +11,9 @@
     border: 1px solid rgba(0,0,0,0.1);
     border-radius: 12px;
     padding: 2rem;
+    min-height: 30rem;
 
-    & .productHeader{
-    }
+
     & .productBrand{
         color: #42AEA8;
         font-family: monospace;
