--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -588,12 +588,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subcategories" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdE-CP-22q">
-                                <rect key="frame" x="10" y="216.66666666666666" width="394" height="33.666666666666657"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <color key="textColor" systemColor="systemOrangeColor"/>
-                                <nil key="highlightedColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdE-CP-22q">
+                                <rect key="frame" x="10" y="216.66666666666666" width="394" height="26.666666666666657"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="  Subcategories">
+                                        <attributes>
+                                            <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="24" name=".SFNS-Regular"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nig-Wl-rKw">
                                 <rect key="frame" x="10" y="161.66666666666666" width="394" height="35"/>
@@ -610,7 +617,7 @@
                                 <cells/>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gm8-nq-kQb">
-                                <rect key="frame" x="10" y="260.33333333333331" width="394" height="552.66666666666674"/>
+                                <rect key="frame" x="10" y="248.33333333333331" width="394" height="564.66666666666674"/>
                                 <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -720,7 +727,7 @@
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="Gm8-nq-kQb" secondAttribute="trailing" constant="10" id="6aL-2q-rvd"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="top" secondItem="Avc-l0-GQU" secondAttribute="top" constant="10" id="8zh-Lu-fOK"/>
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="cd3-kA-RHI" secondAttribute="trailing" id="DYV-gu-Abs"/>
-                            <constraint firstItem="Gm8-nq-kQb" firstAttribute="top" secondItem="qdE-CP-22q" secondAttribute="bottom" constant="10" id="FOO-6e-BZZ"/>
+                            <constraint firstItem="Gm8-nq-kQb" firstAttribute="top" secondItem="qdE-CP-22q" secondAttribute="bottom" constant="5" id="FOO-6e-BZZ"/>
                             <constraint firstItem="Vef-0J-N2F" firstAttribute="bottom" secondItem="Avc-l0-GQU" secondAttribute="bottom" id="HAF-Si-cUI"/>
                             <constraint firstItem="cd3-kA-RHI" firstAttribute="top" secondItem="VyQ-id-LOf" secondAttribute="bottom" id="JgJ-Od-bo2"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="height" secondItem="qNC-4y-a2E" secondAttribute="height" multiplier="0.06" id="KhQ-X9-ALK"/>
