--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
@@ -11,15 +11,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="5" rowHeight="-20" id="KGk-i7-Jjw" customClass="SubCategoryCell" customModule="Bazaar_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="177" height="28"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="5" rowHeight="61" id="KGk-i7-Jjw" customClass="SubCategoryCell" customModule="Bazaar_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="235" height="109"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="177" height="28"/>
+                <rect key="frame" x="0.0" y="0.0" width="235" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejI-Ha-0ZF">
-                        <rect key="frame" x="0.0" y="0.0" width="177" height="28"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OcP-Cb-wey">
+                        <rect key="frame" x="0.0" y="1" width="100" height="108"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="t3t-Kf-31j"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejI-Ha-0ZF">
+                        <rect key="frame" x="115" y="16" width="113" height="79"/>
                         <color key="backgroundColor" red="1" green="0.88722067410000005" blue="0.65450122759999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
@@ -35,19 +42,27 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="ejI-Ha-0ZF" secondAttribute="bottom" id="EBV-cK-IaB"/>
+                    <constraint firstItem="OcP-Cb-wey" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="I72-gy-XvK"/>
                     <constraint firstAttribute="trailing" secondItem="ejI-Ha-0ZF" secondAttribute="trailing" id="NvG-ef-j7s"/>
-                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nWf-J8-cn2"/>
+                    <constraint firstItem="OcP-Cb-wey" firstAttribute="centerY" secondItem="ejI-Ha-0ZF" secondAttribute="centerY" id="Vro-Zj-3o6"/>
+                    <constraint firstItem="OcP-Cb-wey" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="gxw-DS-cOc"/>
+                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="OcP-Cb-wey" secondAttribute="trailing" id="hPE-mU-Bdg"/>
                     <constraint firstItem="ejI-Ha-0ZF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yQi-w9-kd2"/>
+                    <constraint firstItem="OcP-Cb-wey" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="yx6-fw-Eee"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="nameLabel" destination="ejI-Ha-0ZF" id="vZo-Ik-0UB"/>
+                <outlet property="subCategoryImage" destination="OcP-Cb-wey" id="8cd-KS-fYd"/>
             </connections>
-            <point key="canvasLocation" x="22.463768115942031" y="91.071428571428569"/>
+            <point key="canvasLocation" x="6.5217391304347831" y="248.77232142857142"/>
         </tableViewCell>
     </objects>
     <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
