confirmation email alert implemented, some design changes for buttons.

--- a/Projects/Frontend/bazaar-frontend/src/screens/Inventory/inventory.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Inventory/inventory.scss
@@ -23,6 +23,8 @@
   background-color: #F4A133;
   color: white;
     &:hover {
-      background-color: #da8415;
+      background-color: #f1ca1a;
+
+      color: black;
   }
 }
