--- a/Projects/Frontend/bazaar-frontend/src/screens/Profile-page/profilepage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Profile-page/profilepage.scss
@@ -1,6 +1,6 @@
 .profile-form {
     align-content: center;
-    max-width: 50rem;
+    max-width: 60rem;
     margin: auto;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -11,7 +11,7 @@
         padding: 15px;
         border: solid 1px;
         border-color: #e2e2e2;
-        margin-bottom: 50px;
+        margin-bottom: 35px;
 
         & #header3 {
             margin-bottom: 20px;
@@ -20,6 +20,17 @@
         
         & .no-padding-left {
             padding-left: 0!important;
+
+            & .account-update {
+                padding-right: 15px;
+                margin-right: 15px;
+            }
+
+            & .heading-2 {
+                margin-top: 8px;
+
+                margin-bottom: 25px;
+            }
 
             & #save-changes-div{
                 text-align: center;
@@ -41,6 +52,11 @@
                 & input {
                     background-color: #f6f6f6;
                     margin: auto;
+                }
+
+                & .password-input {
+                    padding-left: 0;
+                    padding-right: 30px;
                 }
 
                 & label{
