--- a/Projects/Frontend/bazaar-frontend/src/screens/Sign-In/sign-in.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Sign-In/sign-in.scss
@@ -28,3 +28,18 @@
   .forgot-password a {
     color: #167bff;
   }
+
+  #sign-in-div{
+    text-align: center;
+    & #sign-in {
+        border-color: #F4A133;
+        background-color: #F4A133;
+        width: 100%;
+        color: white;
+          &:hover {
+            background-color: #f1ca1a;
+    
+            color: black;
+        }
+      }
+}
