--- a/Projects/Frontend/bazaar-frontend/src/screens/Add-Product/addproduct.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Add-Product/addproduct.scss
@@ -22,7 +22,7 @@
         border-color: #F4A133;
         background-color: #F4A133;
     
-        color: white;
+        color: black;
           &:hover {
             background-color: #f1ca1a;
     
