--- a/Projects/Frontend/bazaar-frontend/src/screens/Sign-In/sign-in.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Sign-In/sign-in.scss
@@ -35,7 +35,7 @@
         border-color: #F4A133;
         background-color: #F4A133;
         width: 100%;
-        color: white;
+        color: black;
           &:hover {
             background-color: #f1ca1a;
     
