--- a/Projects/Frontend/bazaar-frontend/src/screens/Profile-page/profilepage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Profile-page/profilepage.scss
@@ -39,7 +39,7 @@
                     border-color: #F4A133;
                     background-color: #F4A133;
                 
-                    color: white;
+                    color: black;
                       &:hover {
                         background-color: #f1ca1a;
                 
