Add minor UI change

--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Review Cell/ReviewTableViewCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Review Cell/ReviewTableViewCell.xib
@@ -43,7 +43,7 @@
                                 <rect key="frame" x="0.0" y="31.5" width="240" height="17"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="AZL-PE-4Yy" userLabel="Comment Body Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="AZL-PE-4Yy" userLabel="Comment Body Label">
                                 <rect key="frame" x="0.0" y="63.5" width="41.5" height="47.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
