--- a/Projects/Frontend/bazaar-frontend/src/screens/Cart/cart.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Cart/cart.scss
@@ -1,4 +1,4 @@
-.homeWrapper{
-    padding: 2rem 0rem;
-    background-color: #e8ffff;
+.cartWrapper {
+  padding: 3rem 0rem;
+  background-color: #e8ffff;
 }
